фикс обращения к статическим ресурсам (пока что только к набору слов крокодила)